--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -1,2 +1,4 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.another.app.TestBase.closeBrowser</td></tr>
+<tr><td>com.another.app.TestBase.setBrowser</td></tr>
 </table>
