--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="77b8be">  <td>20/04/09 00:19:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.SampleTest()[pri:0, instance:com.practice.app.NewTest@560348e6]">SampleTest</td> 
-  <td>main@1368173251</td>   <td></td> </tr>
-<tr bgcolor="77b8be">  <td>20/04/09 00:19:25</td>   <td>71</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.shouldAnswerWithTrue()[pri:0, instance:com.practice.app.NewTest@560348e6]">shouldAnswerWithTrue</td> 
-  <td>main@1368173251</td>   <td></td> </tr>
+<tr bgcolor="f8da7a">  <td>20/04/14 22:24:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.SampleTest()[pri:0, instance:com.practice.app.NewTest@2bd2b28e]">SampleTest</td> 
+  <td>main@1338368149</td>   <td></td> </tr>
+<tr bgcolor="f8da7a">  <td>20/04/14 22:24:15</td>   <td>51</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.shouldAnswerWithTrue()[pri:0, instance:com.practice.app.NewTest@2bd2b28e]">shouldAnswerWithTrue</td> 
+  <td>main@1338368149</td>   <td></td> </tr>
 </table>
