--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,2 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
+<table border="1">
+<tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
+<tr bgcolor="67a4d3">  <td>20/04/19 21:42:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="QAClick.RadioButton()[pri:0, instance:com.another.app.QAClick@1991f767]">RadioButton</td> 
+  <td>main@2144067911</td>   <td></td> </tr>
+<tr bgcolor="b0629e">  <td>20/04/19 21:42:23</td>   <td>3273</td> <td title="&lt;&lt;TestBase.closeBrowser()[pri:0, instance:com.another.app.QAClick@1991f767]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2144067911</td>   <td></td> </tr>
+<tr bgcolor="b0629e">  <td>20/04/19 21:41:31</td>   <td>-48867</td> <td title="&gt;&gt;TestBase.setBrowser()[pri:0, instance:com.another.app.QAClick@1991f767]">&gt;&gt;setBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2144067911</td>   <td></td> </tr>
+<tr bgcolor="b0629e">  <td>20/04/19 21:42:22</td>   <td>2256</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestBase.shouldAnswerWithTrue()[pri:0, instance:com.another.app.QAClick@1991f767]">shouldAnswerWithTrue</td> 
+  <td>main@2144067911</td>   <td></td> </tr>
+<tr bgcolor="b0629e">  <td>20/04/19 21:42:22</td>   <td>2411</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestBase.shouldAnswerWithTrue()[pri:0, instance:com.another.app.TestBase@48c35007]">shouldAnswerWithTrue</td> 
+  <td>main@2144067911</td>   <td></td> </tr>
 </table>
